added refreshChunkUrl controller method and an error handler controller

--- a/backend/main/src/main/resources/application.properties
+++ b/backend/main/src/main/resources/application.properties
@@ -4,9 +4,11 @@ external.api.user-service=https://reqres.in/api
 spring.data.mongodb.uri=mongodb://localhost:27017/ftm-data
 
 aws.s3.region=ap-south-1
-aws.s3.bucket= your-bucket-name
+aws.s3.bucket=fms-bucket-main
 
-aws.s3.baseFolder=ftmUploads/
+aws.s3.basePath=ftmUploads/
 aws.s3.chunk.duration=5
+
+
 
 
