--- a/backend/main/pom.xml
+++ b/backend/main/pom.xml
@@ -64,6 +64,16 @@
 			<artifactId>s3</artifactId>
 			<version>2.25.11</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-jpa</artifactId>
+			<version>3.5.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>6.6.24.Final</version>
+		</dependency>
 	</dependencies>
 
 	<build>
